--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,136 @@
     @apply bg-slate-700 text-white;
   }
 }
+
+:root {
+  --color-fire: #E73B0C;
+    --color-grass: #74C236;
+    --color-steel: #B5B5C3;
+    --color-water: #3295F6;
+    --color-psychic: #ED4882;
+    --color-ground: #D3B357;
+    --color-ice: #A3E7FD;
+    --color-flying: #A3B3F7;
+    --color-ghost: #606082;
+    --color-normal: #C8C4BC;
+    --color-poison: #934594;
+    --color-rock: #B9A156;
+    --color-fighting: #82351D;
+    --color-dark: #4F3A2D;
+    --color-bug: #B1C12E;
+    --color-dragon: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
+    --color-electric: #FCBC17;
+    --color-fairy: #F4B1F4;
+    --color-shadow: #7b62a3;
+    --color-unknow: #757575;
+  
+    --color-primary: #006d77;
+    --color-primary-hover: #83c5be;
+
+    --color-hp: #ff5959;
+    --color-attack: #f5ac78;
+    --color-defense: #fae078;
+    --color-sp-attack: #9db7f5;
+    --color-sp-defense: #a7db8d;
+    --color-speed: #fa92b2;
+}
+
+/* Types */
+
+.water {
+  background-color: var(--color-water);
+}
+
+.grass {
+  background-color: var(--color-grass);
+}
+
+.poison {
+  background-color: var(--color-poison);
+}
+
+.fire {
+  background-color: var(--color-fire);
+}
+
+.bug {
+  background-color: var(--color-bug);
+}
+
+.dragon {
+  background: var(--color-dragon);
+}
+
+.flying {
+  background-color: var(--color-flying);
+}
+
+.ground {
+  background-color: var(--color-ground);
+}
+
+.steel {
+  background-color: var(--color-steel);
+}
+
+.psychic {
+  background-color: var(--color-psychic);
+}
+
+.ice {
+  background-color: var(--color-ice);
+}
+
+.ghost {
+  background-color: var(--color-ghost);
+}
+
+.normal {
+  background-color: var(--color-normal);
+}
+
+.rock {
+  background-color: var(--color-rock);
+}
+
+.electric {
+  background-color: var(--color-electric);
+}
+
+.fighting {
+  background-color: var(--color-fighting);
+}
+
+.fairy {
+  background-color: var(--color-fairy);
+}
+
+.dark {
+  background-color: var(--color-dark);
+}
+
+/* Stats */
+
+.hp {
+  background-color: var(--color-hp);
+}
+
+.attack {
+  background-color: var(--color-attack);
+}
+
+.defense {
+  background-color: var(--color-defense);
+}
+
+.special-attack {
+  background-color: var(--color-sp-attack);
+}
+
+.special-defense {
+  background-color: var(--color-sp-defense);
+}
+
+.speed {
+  background-color: var(--color-speed);
+}
