--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,3 +140,18 @@
 .speed {
   background-color: var(--color-speed);
 }
+
+.load-more {
+  font-size: 1.25rem;
+  padding: 15px 0;
+  margin-top: 30px;
+  margin-bottom: 150px;
+  border-radius: 1.6rem;
+  font-weight: 700;
+  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 64vw;
+  min-width: 230px;
+  max-width: 300px;
+}
