--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,3 +155,7 @@
   min-width: 230px;
   max-width: 300px;
 }
+
+.shadow {
+  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+}
