--- a/styles/globals.css
+++ b/styles/globals.css
@@ -584,3 +584,13 @@ html, body {
     width: 100%;
   }
 }
+
+.tab {
+  border-color: rgba(0, 0, 0, 0.2);
+  background:rgba(0, 0, 0, 0.2);
+}
+
+.active-tab {
+  background: none;
+  border-color: rgba(0, 0, 0, 0.2);
+}
