--- a/styles/globals.css
+++ b/styles/globals.css
@@ -284,6 +284,24 @@ html, body {
   margin: auto;
 }
 
+.move-modal-container {
+  height: calc(100vh - 70px);
+  /* max-height: 615px; */
+  max-height: 500px;
+  /* width: 65%; */
+  width: 35%;
+  background-color: rgb(0,0,0,0.7);
+  border-radius: 1rem;
+  padding: 20px;
+  position: relative;
+  /* display: flex; */
+  animation: fadeIn 0.4s ease-in-out;
+  overflow-y: scroll;
+  /* max-width: 960px; */
+  max-width: 1200px;
+  margin: auto;
+}
+
 .modal-close {
   position: absolute;
   top: 5px;
