--- a/styles/globals.css
+++ b/styles/globals.css
@@ -502,7 +502,7 @@ html, body {
 }
 
 .pokemon-evolution {
-  margin-bottom: 0;
+  margin-bottom: 20px;
   min-height: 197px;
 }
 
@@ -633,4 +633,6 @@ html, body {
 
 .move-list {
   background: rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+  margin-top: 0;
 }
