--- a/styles/globals.css
+++ b/styles/globals.css
@@ -411,7 +411,7 @@ html, body {
   /* max-height: 615px; */
   max-height: 500px;
   /* width: 65%; */
-  width: 35%;
+  /* width: 35%; */
   background-color: rgb(0,0,0,0.7);
   border-radius: 1rem;
   padding: 20px;
