--- a/styles/globals.css
+++ b/styles/globals.css
@@ -498,7 +498,7 @@ h6 {
 
 .info-box-sprite h3 {
   font-size: 1.9em;
-  /* margin-top: 25px; */
+  margin-top: 15px;
 }
 
 .info-box-sprite .pokeball-icon {
